--- a/.bottom.en.rst
+++ b/.bottom.en.rst
@@ -14,8 +14,10 @@
 
    Those web pages are generated with **Sphinx**, from
    ``reStructuredText`` source files.
-   Feel free to ask any questions, or to report any bugs on `this page
-   <https://bitbucket.org/lbesson/web-sphinx/issues>`_.
+   Feel free to ask any questions, or to report any bugs on this page
+   `web-sphinx/issues <https://bitbucket.org/lbesson/web-sphinx/issues>`_.
+   If this is about one of the Javascript piece of code I used, please use
+   `web-sphinx-scripts/issues <https://bitbucket.org/lbesson/web-sphinx-scripts/issues>`_.
    Precision about copyrights, quoted trademarks and institutions are available
    here `<trademarks.html>`_.
 
