--- a/.bottom.en.rst
+++ b/.bottom.en.rst
@@ -1,18 +1,15 @@
 .. include:: .special.rst
+
 ---------------------------------------------------------------------
+
 .. note:: Sphinx and reStructuredTex
 
-   Those web pages are generated with **Sphinx**, from
-   ``reStructuredText`` source files.
-
-   Feel free to ask any questions, or to report any bugs on this page
-   `web-sphinx/issues <https://bitbucket.org/lbesson/web-sphinx/issues>`_.
-
-   If this is about one of the Javascript piece of code I used, please use
-   `web-sphinx-scripts/issues <https://bitbucket.org/lbesson/web-sphinx-scripts/issues>`_.
-
-   Precision about copyrights, quoted trademarks and institutions are available
-   here `<trademarks.html>`_.
+   * Feel free to ask any questions, or to report any bugs on this page
+     `web-sphinx/issues <https://bitbucket.org/lbesson/web-sphinx/issues>`_.
+   * If this is about one of the Javascript piece of code I used, please use
+     `web-sphinx-scripts/issues <https://bitbucket.org/lbesson/web-sphinx-scripts/issues>`_.
+   * Precision about copyrights, quoted trademarks and institutions are available
+     here `<trademarks.html>`_.
 
 .. warning:: Javascript and Google Analytics ®
 
@@ -20,7 +17,6 @@
    integrate **Google Analytics** on those pages.
 
    To disable those tools, you can disable Javascript
-   (probably with the preferences menu of your browser);
    or use something like `Ghostery <http://www.ghostery.com>`_.
 
 .. (c) Lilian Besson, 2011-2013.
