move the footer (about rST and Sphinx, and about JS and GG An) to .templates/layout.html

--- a/.bottom.en.rst
+++ b/.bottom.en.rst
@@ -1,8 +1,8 @@
 .. include:: .special.rst
 
----------------------------------------------------------------------
+.. ---------------------------------------------------------------------
 
-.. note:: Sphinx and reStructuredTex
+.. .. note:: Sphinx and reStructuredTex
 
    * Feel free to ask any questions, or to report any bugs on this page
      `web-sphinx/issues <https://bitbucket.org/lbesson/web-sphinx/issues>`_.
@@ -11,7 +11,7 @@
    * Precision about copyrights, quoted trademarks and institutions are available
      here `<trademarks.html>`_.
 
-.. warning:: Javascript and Google Analytics ®
+.. .. warning:: Javascript and Google Analytics ®
 
    I'm using ``Javascript``, and some Django *templating* to dynamically
    integrate **Google Analytics** on those pages.
