--- a/.special.rst
+++ b/.special.rst
@@ -4,7 +4,7 @@
 
 .. raw:: html
 
-     <link rel="alternate" type="application/rss+xml" title="Actus du développement web (RSS)" href="https://bitbucket.org/lbesson/web-sphinx/rss"/>
+     <link rel="alternate" type="application/rss+xml" title="Suivre les modifications" href="https://bitbucket.org/lbesson/web-sphinx/rss"/>
 
      <style> .black {color:black} </style>
      <style> .gray {color:gray} </style>
