--- a/.special.rst
+++ b/.special.rst
@@ -4,27 +4,27 @@
 
 .. raw:: html
 
-     <style> .black {color:black} </style>
-     <style> .gray {color:gray} </style>
-     <style> .silver {color:silver} </style>
-     <style> .white {color:white} </style>
-     <style> .maroon {color:maroon} </style>
-     <style> .red {color:red} </style>
-     <style> .magenta {color:magenta} </style>
-     <style> .fuchsia {color:fuchsia} </style>
-     <style> .pink {color:pink} </style>
-     <style> .orange {color:orange} </style>
-     <style> .yellow {color:yellow} </style>
-     <style> .lime {color:lime} </style>
-     <style> .green {color:green} </style>
-     <style> .olive {color:olive} </style>
-     <style> .teal {color:teal} </style>
-     <style> .cyan {color:cyan} </style>
-     <style> .aqua {color:aqua} </style>
-     <style> .blue {color:blue} </style>
-     <style> .navy {color:navy} </style>
-     <style> .purple {color:purple} </style>
-     <style> .u {text-decoration: underline} </style>
+     <style type="text/css"> .black {color:black} </style>
+     <style type="text/css"> .gray {color:gray} </style>
+     <style type="text/css"> .silver {color:silver} </style>
+     <style type="text/css"> .white {color:white} </style>
+     <style type="text/css"> .maroon {color:maroon} </style>
+     <style type="text/css"> .red {color:red} </style>
+     <style type="text/css"> .magenta {color:magenta} </style>
+     <style type="text/css"> .fuchsia {color:fuchsia} </style>
+     <style type="text/css"> .pink {color:pink} </style>
+     <style type="text/css"> .orange {color:orange} </style>
+     <style type="text/css"> .yellow {color:yellow} </style>
+     <style type="text/css"> .lime {color:lime} </style>
+     <style type="text/css"> .green {color:green} </style>
+     <style type="text/css"> .olive {color:olive} </style>
+     <style type="text/css"> .teal {color:teal} </style>
+     <style type="text/css"> .cyan {color:cyan} </style>
+     <style type="text/css"> .aqua {color:aqua} </style>
+     <style type="text/css"> .blue {color:blue} </style>
+     <style type="text/css"> .navy {color:navy} </style>
+     <style type="text/css"> .purple {color:purple} </style>
+     <style type="text/css"> .u {text-decoration: underline} </style>
 
 .. .. raw:: latex
 ..  en.wikibooks.org/wiki/LaTeX/Colors
