--- a/.bottom.fr.rst
+++ b/.bottom.fr.rst
@@ -2,34 +2,13 @@
  
 ---------------------------------------------------------------------
 
-  +---------------------------------------------------------------+--------------------+---------------------------------------------------------------+--------------------+
-  |  .. image::  http://jigsaw.w3.org/css-validator/images/vcss   |                    |  .. image::  http://www.w3.org/Icons/valid-xhtml10            |                    |
-  |     :align:  left                                             | Vérifier les       |     :align:  right                                            | Vérifier la page   |
-  |     :width:  88px                                             | feuilles de style  |     :width:  88px                                             | **HTML** !         |
-  |     :height: 31px                                             | (**CSS**) !        |     :height: 31px                                             |                    |
-  |     :target: http://jigsaw.w3.org/css-validator/check/referer |                    |     :target: http://validator.w3.org/check?uri=referer        |                    |
-  |     :alt: Feuille de style (CSS 3.0) valide                   |                    |     :alt: Page (XHTML 1.0 strict) valide !                    |                    |
-  +---------------------------------------------------------------+--------------------+---------------------------------------------------------------+--------------------+
-
-.. -----------------------------------------------------------------------------
-
-.. .. note:: Sphinx et reStructuredText
-
-   * Toutes remarques, questions, ou notifications de bugs peuvent être posées
-     via cette page
-     `web-sphinx/issues <https://bitbucket.org/lbesson/web-sphinx/issues>`_.
-   * Si cela concerne un des scripts présents sur mes pages, veuillez utiliser
-     `web-sphinx-scripts/issues <https://bitbucket.org/lbesson/web-sphinx-scripts/issues>`_.
-   * Des précisions sur les droits de copies, de propriétés intellectuelles,
-     sur les institutions et les marques citées sont disponibles
-     `sur cette page (en anglais) <trademarks.html>`_.
-
-.. .. warning:: Javacsript et Google Analytics ®
-
-   J'utilise du ``Javascript``, et du *templating* Django pour intégrer
-   dynamiquement **Google Analytics** à ces pages là.
-
-   Pour désactiver ces outils, vous pouvez (au choix) désactiver Javascript
-   ou alors utiliser `Ghostery <http://www.ghostery.com/>`_.
++--------------------+---------------------------------------------------------------+---------------------------------------------------------------+--------------------+
+|                    |  .. image::  http://jigsaw.w3.org/css-validator/images/vcss   |  .. image::  http://www.w3.org/Icons/valid-xhtml10            |                    |
+| Vérifier les       |     :align:  left                                             |     :align:  right                                            | Vérifier la page   |
+| feuilles de style  |     :width:  88px                                             |     :width:  88px                                             | **HTML** !         |
+| (**CSS**) !        |     :height: 31px                                             |     :height: 31px                                             |                    |
+|                    |     :target: http://jigsaw.w3.org/css-validator/check/referer |     :target: http://validator.w3.org/check?uri=referer        |                    |
+|                    |     :alt: Feuille de style (CSS 3.0) valide                   |     :alt: Page (XHTML 1.0 strict) valide !                    |                    |
++--------------------+---------------------------------------------------------------+---------------------------------------------------------------+--------------------+
 
 .. (c) Lilian Besson, 2011-2013.
