--- a/.javascript.rst
+++ b/.javascript.rst
@@ -13,4 +13,4 @@
    Attention: votre navigateur semble ne pas supporter Javascript !</span>
    </noscript>
 
-.. (c) Lilian Besson, 2011-2013, https://bitbucket.org/lbesson/web-spĥinx/
+.. (c) Lilian Besson, 2011-2013, https://bitbucket.org/lbesson/web-sphinx/
