--- a/.special.rst
+++ b/.special.rst
@@ -32,4 +32,4 @@
 .. role:: left
 .. role:: right
 
-.. (c) Lilian Besson, 2011-2013, https://bitbucket.org/lbesson/web-spĥinx/
+.. (c) Lilian Besson, 2011-2013, https://bitbucket.org/lbesson/web-sphinx/
