clean <script> balises

--- a/.javascript.rst
+++ b/.javascript.rst
@@ -9,7 +9,7 @@
 
 .. raw:: html
 
-   <noscript><span style="color:red" text-align="center">
+   <noscript><span style="color:red">
    Attention: votre navigateur semble ne pas supporter Javascript !</span>
    </noscript>
 
