ok tout roule. En train de voir pour installer jCaption et NBL.js

--- a/404.rst
+++ b/404.rst
@@ -20,7 +20,7 @@
         + " (L'erreur continuera sûrement...)");
       }
       else{
-       document.write("<span style="color:red">Accès direct à cette page d'erreur détectée !</span>");
+       document.write("<span style=\"color:red\">Accès direct à cette page d'erreur détectée !</span>");
       };
       </script>
 
