--- a/404.rst
+++ b/404.rst
@@ -3,7 +3,7 @@
 ###############################
 .. include:: .special.rst
 
-.. warning::
+.. warning:: Page d'erreur 404 !
 
    :red:`Oups, on dirait que vous avez voulu accéder à une page qui n'existe pas`.
 
@@ -29,13 +29,15 @@
    n'hésitez pas à me contacter (`par email par exemple <mailto:lilian DOT besson AT ens-cachan DOT fr>`_),
    ou en *signalant un bug* via le gestionnaire de bugs, sur **bitbucket** `web-sphinx/issues
    <https://bitbucket.org/lbesson/web-sphinx/issues>`_.
-   
+
+
 ---------------------------------------------------------------------
 
 .. sidebar:: Retourner à l'accueil
 
    Cette page n'est pas intéressante, allez plutôt consulter `celle là <index.html>`_.
    
+
 ---------------------------------------------------------------------
 
 .. image:: .error.jpg
@@ -43,5 +45,6 @@
    :align: center
    :alt: Un petit bonhomme tient un panneau "Sorry, this page is unavailable"...
    :target: index.html
+
 
 .. (c) Lilian Besson, 2011-2014, https://bitbucket.org/lbesson/web-sphinx/
